--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@azure/msal-browser": "^2.32.2",
     "@azure/msal-react": "^1.5.2",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "capitalize": "^2.0.4",
     "ejs": "^3.1.8",
     "msal": "^1.4.17",
     "overlay-navbar": "^1.2.3",
@@ -27,6 +28,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "tailwindcss": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
